--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@heroicons/react": "^2.2.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.63.0",
     "react-router-dom": "^7.9.2"
   },
