--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,9 @@
-name = "shaiitech-dot-com"
-pages_build_output_dir = "dist"
-compatibility_date = "2024-01-01"
+# Cloudflare Pages configuration
+name = "shaiitech"
+compatibility_date = "2024-09-26"
 
-[build]
-command = "npm run build"
+[env.production]
+compatibility_date = "2024-09-26"
+
+[[env.production.routes]]
+pattern = "*"
